# neenee

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh-CN.md  clippy.toml  deny.toml  install.sh  rustfmt.toml  test_ratatui.rs  test_tui_width.rs
crates/neenee/: Cargo.toml
crates/neenee-agent/: Cargo.toml  README.md
crates/neenee-agent/skills/bundled/: README.md
crates/neenee-agent/src/: agent.rs  catalog.rs  dynamic.rs  envoy_tool.rs  hook_runner.rs  hooks.rs  lib.rs  loop_guard.rs  modelsdev.rs  nudge.rs  orchestration.rs  permission_store.rs  plan_subagent.rs  plan_verify.rs  progress_tool.rs  prompt.rs  pursuit_state.rs  session_review.rs  session_title.rs  steering.rs  subagent_tool.rs  task_tool.rs  tests.rs  todo_tools.rs
crates/neenee-agent/src/skills/: bundled.rs  discovery.rs  metadata.rs  mod.rs  remote.rs  render.rs  tools.rs
crates/neenee-agent/tests/: duplex.rs  session_round_trip.rs
crates/neenee-app/: Cargo.toml
crates/neenee-app/src/: catalog.rs  config.rs  events.rs  lib.rs  lock.rs  session.rs
crates/neenee-cli/: Cargo.toml
crates/neenee-cli/src/: agent_loop.rs  config.rs  goals.rs  hooks.rs  main.rs  mcp_catalog.rs  pursuits.rs  review.rs  session_view.rs  shell.rs  side.rs  startup.rs  tests.rs
crates/neenee-cli/src/handlers/: chat.rs  mod.rs  permission.rs  provider.rs  session.rs  slash.rs
crates/neenee-cli/src/showcase/: mod.rs  permission.rs  question.rs  simple.rs
crates/neenee-cli/src/tui/: app.rs  clipboard.rs  clipboard_ops.rs  completion.rs  composer_attachments.rs  config.rs  document.rs  event_loop.rs  export.rs  input.rs  layout.rs  mod.rs  models.rs  providers.rs  question_model.rs  selection.rs  step_interaction.rs  terminal.rs  tests.rs  transcript.rs
crates/neenee-code/: Cargo.toml  README.md
crates/neenee-code/src/: agent_loop.rs  agent_setup.rs  main.rs  side.rs  startup.rs  tests.rs
crates/neenee-code/src/handlers/: chat.rs  permission.rs  slash.rs
crates/neenee-code/src/showcase/: common.rs  mod.rs  permission.rs  question.rs  simple.rs  tool_step.rs  transcript.rs
crates/neenee-code/src/tui/: app.rs  clipboard.rs  clipboard_ops.rs  completion.rs  composer_attachments.rs  config.rs  document.rs  event_loop.rs  input.rs  interaction.rs  layout.rs  mod.rs  providers.rs  question_model.rs  selection.rs  step_interaction.rs  terminal.rs  tests.rs  transcript.rs  versioned.rs
crates/neenee-core/: Cargo.toml  README.md
crates/neenee-core/src/: agent.rs  capability.rs  catalog.rs  commands.rs  cron.rs  dynamic.rs  effort.rs  envoy.rs  error.rs  events.rs  hooks.rs  lib.rs  mcp.rs  message.rs  model.rs  nudgeconfig.rs  plan.rs  pressure.rs  project.rs  prompt.rs  providers.rs  repeat.rs  session_review.rs  session_title.rs  skills.rs  skillsconfig.rs  subagent.rs  tests.rs  thinking.rs  todos.rs  token_ledger.rs  tool_call.rs  tool_output.rs  tool_registry.rs  tools.rs  webconfig.rs
crates/neenee-core/src/db/: mod.rs
crates/neenee-core/src/goals/: mod.rs  prompts.rs  service.rs  store.rs  tools.rs
crates/neenee-core/src/pursuits/: mod.rs  prompts.rs  service.rs  store.rs  tools.rs
crates/neenee-core/src/skills/: config.rs  mod.rs  remote.rs
crates/neenee-daemon/: Cargo.toml
crates/neenee-daemon/src/: main.rs
crates/neenee-harness/: Cargo.toml
crates/neenee-harness/src/: catalog.rs  lib.rs  orchestration.rs  task_tool.rs  tests.rs
crates/neenee-harness/src/skills/: discovery.rs  mod.rs
crates/neenee-providers/: Cargo.toml  README.md
crates/neenee-providers/src/: anthropic_compat.rs  gemini.rs  lib.rs  llama.rs  mock.rs  openai_compat.rs  registry.rs  sse.rs
crates/neenee-providers/tests/: wire.rs
crates/neenee-quant/: Cargo.toml  README.md
crates/neenee-quant-gui/: Cargo.toml  README.md
crates/neenee-quant-gui/src/: lib.rs  main.rs
crates/neenee-quant/src/: backtest.rs  config.rs  lib.rs  market_data.rs  orders.rs  runtime.rs
crates/neenee-quant/tests/: profile_isolation.rs
crates/neenee-server/: Cargo.toml  README.md
crates/neenee-server/src/: agent_loop.rs  agent_setup.rs  export.rs  handlers_chat.rs  handlers_permission.rs  handlers_provider.rs  handlers_session.rs  handlers_slash.rs  hooks.rs  lib.rs  mcp_catalog.rs  mcp_runtime.rs  registry.rs  serve.rs  session_view.rs  shared.rs  shell.rs  side.rs  startup.rs  ui_bridge.rs
crates/neenee-server/tests/: serve_integration.rs
crates/neenee-store/: Cargo.toml  README.md
crates/neenee-store/src/: blobs.rs  cache.rs  config.rs  embedding.rs  events.rs  fsutil.rs  legacy_pursuit.rs  lib.rs  lock.rs  model_usage.rs  paths.rs  provider_usage.rs  repeat.rs  search_tool.rs  session.rs
crates/neenee-store/src/db/: mod.rs
crates/neenee-store/src/pursuits/: mod.rs  service.rs  store.rs
crates/neenee-store/src/session/: mod.rs  tests.rs
crates/neenee-tools/: Cargo.toml  README.md
crates/neenee-tools/src/: abort.rs  ask_user.rs  bash.rs  commands.rs  edit.rs  glob.rs  grep.rs  helpers.rs  lib.rs  list.rs  mcp.rs  project.rs  read.rs  read_image.rs  ssrf.rs  tests.rs  web.rs  write.rs
crates/neenee-tools/src/search/: duckduckgo.rs  exa.rs  mod.rs  parallel.rs  searxng.rs  tavily.rs
crates/neenee-tools/tests/: mcp_stdio.rs
crates/neenee-tools/tests/fixtures/: mock_mcp_server.py
crates/neenee-tui/: Cargo.toml  README.md
crates/neenee-tui-view/: Cargo.toml
crates/neenee-tui-view/src/: completion.rs  document.rs  fuzzy.rs  layout.rs  lib.rs  modal.rs  providers.rs  selection.rs
crates/neenee-tui-view/src/render/: chrome.rs  composer.rs  design.rs  empty_state.rs  markdown_table.rs  message_body.rs  mod.rs  notice.rs  primitives.rs  theme.rs  (+2 more)
crates/neenee-tui/src/: backend.rs  cell.rs  clipboard.rs  config.rs  diff.rs  document.rs  frame.rs  fuzzy.rs  grid.rs  input.rs  layout.rs  lib.rs  render.rs  selection.rs  step_interaction.rs  text.rs  widgets.rs
crates/neenee-tui/tests/: engine.rs  widgets.rs
crates/neenee/src/: blobs.rs  catalog.rs  config.rs  embedding.rs  events.rs  fsutil.rs  lock.rs  main.rs  model_usage.rs  paths.rs  search_tool.rs  session.rs
(+364 files in other folders)
