[workspace]
members = [
    "crates/neenee-core",
    "crates/neenee-store",
    "crates/neenee-providers",
    "crates/neenee-tools",
    "crates/neenee-quant",
    "crates/neenee-agent",
    "crates/neenee-code",
    "crates/neenee-server",
    "crates/neenee-tui",
]
resolver = "2"

# Shared external dependencies, pinned once here. Crates reference them with
# `dep = { workspace = true }` (optionally adding features). Internal crates
# stay as path dependencies in each member's Cargo.toml.
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { package = "yaml_serde", version = "0.10" }
toml = "1"
futures = "0.3"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-tungstenite = "0.26"
reqwest = { version = "0.13", features = ["json", "stream", "socks", "gzip", "brotli", "query", "form"] }
glob = "0.3"
walkdir = "2"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
httpdate = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
tracing = "0.1"
inventory = "0.3"
rusqlite = { version = "0.40", features = ["bundled", "chrono"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }

# TUI stack. crossterm is the low-level terminal I/O layer (raw mode, input,
# alt screen, escape-code emission); the shared `crossterm` feature set is
# pinned once here. `neenee-tui` is the in-house grid + diff rendering engine
# (ADR-0038) and `neenee-code` consumes it.
crossterm = { version = "0.29", features = ["event-stream"] }
unicode-width = "0.2"
unicode-segmentation = "1.12"
