[package]
name = "neenee-agent"
version = "0.0.1"
edition = "2021"
rust-version = "1.88"
license = "MIT"

[dependencies]
neenee-core = { path = "../neenee-core" }
neenee-store = { path = "../neenee-store" }
neenee-providers = { path = "../neenee-providers" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream", "socks", "gzip", "brotli"] }
walkdir = "2"
glob = "0.3"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
include_dir = "0.7"

[dev-dependencies]
neenee-tools = { path = "../neenee-tools" }
tokio = { version = "1", features = ["test-util"] }
toml = "0.8"
