[package]
name = "neenee-agent"
version = "0.13.2"
edition = "2024"
rust-version = "1.95"
license = "MIT"

[dependencies]
neenee-core = { path = "../neenee-core" }
neenee-store = { path = "../neenee-store" }
neenee-providers = { path = "../neenee-providers" }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
include_dir = "0.7"
inventory = { workspace = true }
regex = "1"
fastrand = { workspace = true }

[dev-dependencies]
neenee-tools = { path = "../neenee-tools" }
tokio = { workspace = true, features = ["test-util"] }
toml = { workspace = true }

[lints]
workspace = true
