[package]
name = "neenee-cli"
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"

[[bin]]
name = "neenee"
path = "src/main.rs"

[dependencies]
neenee-core = { path = "../neenee-core" }
neenee-store = { path = "../neenee-store" }
neenee-providers = { path = "../neenee-providers" }
neenee-tools = { path = "../neenee-tools" }
neenee-agent = { path = "../neenee-agent" }
ratatui = "0.26"
crossterm = { version = "0.29", features = ["event-stream"] }
arboard = "3.4"
dirs = { workspace = true }
pulldown-cmark = "0.10"
unicode-width = "0.1"
similar = { version = "2", features = ["unicode"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { workspace = true }

[dev-dependencies]
insta = "1"
tempfile = "3"
