[package]
name = "neenee-code"
version = "0.13.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"

[[bin]]
name = "neenee-code"
path = "src/main.rs"

[dependencies]
neenee-core = { path = "../neenee-core" }
neenee-store = { path = "../neenee-store" }
neenee-providers = { path = "../neenee-providers" }
neenee-tools = { path = "../neenee-tools" }
neenee-agent = { path = "../neenee-agent" }
neenee-server = { path = "../neenee-server" }
neenee-tui = { path = "../neenee-tui" }
neenee-tui-view = { path = "../neenee-tui-view" }
async-trait = { workspace = true }
crossterm = { workspace = true }
arboard = "3.6"
dirs = { workspace = true }
unicode-width = "0.2"
similar = { version = "2", features = ["unicode"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { workspace = true }
unicode-segmentation.workspace = true

[dev-dependencies]
insta = "1.48"
tempfile = "3"
