[package]
name = "neenee-core"
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
glob = { workspace = true }
walkdir = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
httpdate = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
