[package]
name = "neenee-core"
version = "0.14.3"
edition = "2024"
rust-version = "1.95"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
glob = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }

[dev-dependencies]
toml = { workspace = true }

[lints]
workspace = true
