[package]
name = "neenee-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
neenee-core = { path = "../neenee-core" }
neenee-app = { path = "../neenee-app" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "stream", "socks", "gzip", "brotli"] }
walkdir = "2"
glob = "0.3"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
dirs = "5"

[dev-dependencies]
neenee-tools = { path = "../neenee-tools" }
toml = "0.8"
