[package]
name = "neenee-providers"
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"

[dependencies]
neenee-core = { path = "../neenee-core" }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
httpdate = { workspace = true }
