[package]
name = "neenee-providers"
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[dependencies]
neenee-core = { path = "../neenee-core" }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
httpdate = { workspace = true }
