[package]
name = "neenee-providers"
version = "0.14.3"
edition = "2024"
rust-version = "1.95"
license = "MIT"

[dependencies]
neenee-core = { path = "../neenee-core" }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
httpdate = { workspace = true }

[dev-dependencies]
# `wire` integration test exercises the full HTTP → SSE → parse path against a
# localhost mock server, covering behaviour the in-module unit tests (which can
# only call pure parser functions) cannot reach.
mockito = "1"
tokio = { workspace = true }

[lints]
workspace = true
