[package]
name = "neenee-quant-gui"
version = "0.14.1"
edition = "2024"
rust-version = "1.95"
license = "MIT"

[[bin]]
name = "neenee-quant-gui"
path = "src/main.rs"
required-features = ["gui"]

[features]
default = []
gui = ["dep:iris"]

[dependencies]
neenee-core = { path = "../neenee-core" }
neenee-quant = { path = "../neenee-quant" }
iris = { git = "https://github.com/ming2k/optics.git", rev = "0c9d4a2aa083f015addd7f012720015fc3f98de4", optional = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
