[package]
name = "neenee-quant"
version = "0.12.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"

[dependencies]
neenee-core = { path = "../neenee-core" }
neenee-agent = { path = "../neenee-agent" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
chrono = { workspace = true }

[dev-dependencies]
neenee-tools = { path = "../neenee-tools" }
tokio = { workspace = true }

[lints]
workspace = true
