[package]
name = "neenee-server"
version = "0.14.1"
edition = "2024"
rust-version = "1.95"
license = "MIT"

[dependencies]
neenee-core = { path = "../neenee-core" }
neenee-store = { path = "../neenee-store" }
neenee-providers = { path = "../neenee-providers" }
neenee-tools = { path = "../neenee-tools" }
neenee-agent = { path = "../neenee-agent" }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
