[package]
name = "neenee-store"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
neenee-core = { path = "../neenee-core" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
tracing = "0.1"
directories = "5.0"
dirs = "5"
libc = "0.2"
crc32c = "0.6"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
neenee-providers = { path = "../neenee-providers" }
