[package]
name = "neenee-store"
version = "0.14.2"
edition = "2024"
rust-version = "1.95"
license = "MIT"

[dependencies]
neenee-core = { path = "../neenee-core" }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
directories = "6.0"
dirs = { workspace = true }
libc = "0.2"
crc32c = "0.6"
hex = "0.4"
chrono = { workspace = true }
inventory = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
neenee-providers = { path = "../neenee-providers" }
