[package]
name = "neenee-tools"
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"

[dependencies]
neenee-core = { path = "../neenee-core" }
neenee-store = { path = "../neenee-store" }
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "socks", "gzip", "brotli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
glob = "0.3"
walkdir = "2"
dirs = "5"
tracing = "0.1"
inventory = "0.3"

[dev-dependencies]
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
