[package]
name = "neenee-tools"
version = "0.10.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"

[dependencies]
neenee-core = { path = "../neenee-core" }
neenee-store = { path = "../neenee-store" }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
glob = { workspace = true }
walkdir = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }
base64 = { workspace = true }
image = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
