[package]
name = "neenee-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
neenee-core = { path = "../neenee-core" }
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.10"
unicode-width = "0.1"

[build-dependencies]
tonic-build = "0.12"
