[package]
name = "neenee-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
neenee-core = { path = "../neenee-core" }
neenee-app = { path = "../neenee-app" }
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.10"
unicode-width = "0.1"
similar = { version = "2", features = ["unicode"] }
arboard = "3.4"
dirs = "5"

[dev-dependencies]
insta = "1"
tempfile = "3"
toml = "0.8"
